--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,15 @@ html {
     overflow-x: hidden;
     height: 100%;
 }
+
+/* Remove spinner arrows from input[type=number] for Chrome, Safari, Edge */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove spinner arrows from input[type=number] for Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
